--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,22 @@
 #spring.datasource.password=password
 #
 #spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.h2.console.enabled=true
-
-spring.datasource.url=jdbc:h2:file:./db
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
-
+#
+#spring.h2.console.enabled=true
+#
+#spring.datasource.url=jdbc:h2:file:./db
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+#
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto=create-drop
+##
+#server.port=8080
+#
 server.port=8080
+spring.datasource.name=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.hibernate.ddl-auto=create-drop
