--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,5 @@ server.port=8080
 spring.datasource.name=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/
 spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.password=admin123
 spring.jpa.hibernate.ddl-auto=create-drop
